@@ -796,6 +796,20 @@ static bool execMoveBackwardAndModifySelection(Frame* frame)
     return true;
 }
 
+static bool execMoveUpByPageAndModifyCaret(Frame* frame)
+{
+    RenderObject* renderer = frame->document()->focusedNode()->renderer();
+    if (renderer->style()->overflowY() == OSCROLL
+        || renderer->style()->overflowY() == OAUTO
+        || renderer->isTextArea()) {
+        int height = -(frame->document()->focusedNode()->renderer()->clientHeight()-PAGE_KEEP);
+        bool handledScroll = renderer->scroll(ScrollUp, ScrollByPage);
+        bool handledCaretMove = frame->selectionController()->modify(SelectionController::MOVE, height);
+        return handledScroll || handledCaretMove;
+    }
+    return false;
+}
+
 static bool execMoveDown(Frame* frame)
 {
     frame->selectionController()->modify(SelectionController::MOVE, SelectionController::FORWARD, LineGranularity, true);
@@ -818,6 +832,20 @@ static bool execMoveForwardAndModifySelection(Frame* frame)
 {
     frame->selectionController()->modify(SelectionController::EXTEND, SelectionController::FORWARD, CharacterGranularity, true);
     return true;
+}
+
+static bool execMoveDownByPageAndModifyCaret(Frame* frame)
+{
+    RenderObject* renderer = frame->document()->focusedNode()->renderer();
+    if (renderer->style()->overflowY() == OSCROLL
+        || renderer->style()->overflowY() == OAUTO
+        || renderer->isTextArea()) {
+        int height = frame->document()->focusedNode()->renderer()->clientHeight()-PAGE_KEEP;
+        bool handledScroll = renderer->scroll(ScrollDown, ScrollByPage);
+        bool handledCaretMove = frame->selectionController()->modify(SelectionController::MOVE, height);
+        return handledScroll || handledCaretMove;
+    }
+    return false;
 }
 
 static bool execMoveLeft(Frame* frame)
@@ -1121,10 +1149,12 @@ static CommandMap* createCommandMap()
         { "ForwardDelete", { hasEditableSelection, execForwardDelete } },
         { "MoveBackward", { hasEditableSelection, execMoveBackward } },
         { "MoveBackwardAndModifySelection", { hasEditableSelection, execMoveBackwardAndModifySelection } },
+        { "MoveUpByPageAndModifyCaret", { hasEditableSelection, execMoveUpByPageAndModifyCaret } },
         { "MoveDown", { hasEditableSelection, execMoveDown } },
         { "MoveDownAndModifySelection", { hasEditableSelection, execMoveDownAndModifySelection } },
         { "MoveForward", { hasEditableSelection, execMoveForward } },
         { "MoveForwardAndModifySelection", { hasEditableSelection, execMoveForwardAndModifySelection } },
+        { "MoveDownByPageAndModifyCaret", { hasEditableSelection, execMoveDownByPageAndModifyCaret } },
         { "MoveLeft", { hasEditableSelection, execMoveLeft } },
         { "MoveLeftAndModifySelection", { hasEditableSelection, execMoveLeftAndModifySelection } },
         { "MoveRight", { hasEditableSelection, execMoveRight } },
