@@ -1,3 +1,14 @@
+2007-02-06  Alice Liu  <alice.liu@apple.com>
+
+        Reviewed by Maciej.
+
+        Added editing command functions for scrolling by page and moving the caret
+
+        * editing/Editor.cpp:
+        (WebCore::execMoveUpByPageAndModifyCaret):
+        (WebCore::execMoveDownByPageAndModifyCaret):
+        (WebCore::CommandEntry::):
+
 2007-02-06  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by john
